--- a/Assignment_3/Q4/Makefile
+++ b/Assignment_3/Q4/Makefile
@@ -1,10 +1,10 @@
-all : prog01 prog02 
+all : case1 case2 
 
-prog01 : server.c
-    gcc -o server server.c -lrt
+case1 : server_queue.c
+    gcc -o server server_queue.c -lrt
 
-prog02 : user2.c 
-    gcc -o client client.c -lrt
+case2 : client_queue.c 
+    gcc -o client client_queue.c -lrt
 
 run : all
 	./server.out ./client.out
